force-app/main/default/objects/PDLM__Part_Cost__c/PDLM__Part_Cost__c.object-meta.xml
<CustomObject>
    <description>Costs for manufacturer parts</description>
    <label>Part Cost</label>
    <nameField>
        <displayFormat>Cost-{000000}</displayFormat>
        <label>Cost Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Part Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>