force-app/main/default/objects/PDLM__Part_Cost__c/fields/PDLM__Cost_Date__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Cost_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Cost Date</label>
    <type>Date</type>
</CustomField>