force-app/main/default/objects/PDLM__Part_Cost__c/fields/PDLM__Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Cost_Type__c</fullName>
    <label>Cost Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PDLM__Part_Cost_Types</valueSetName>
    </valueSet>
</CustomField>