force-app/main/default/objects/PDLM__Part_Cost__c/fields/PDLM__Manufacturer_Part__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Manufacturer_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturer Part</label>
    <referenceTo>PDLM__Manufacturer_Part__c</referenceTo>
    <relationshipLabel>Part Costs</relationshipLabel>
    <relationshipName>Part_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>